add links to mailing lists (https://github.com/GeoNode/geonode/issues/1187

--- a/pages/communication/index.html
+++ b/pages/communication/index.html
@@ -21,7 +21,7 @@
                             <h4>Users Mailing Lists</h4>
 							<p>This list is for users. It’s focused on questions about GeoNode itself, but it’s also great to post about topics around GeoNode, and implementations of projects on top of GeoNode. This can include customization of Django and other GeoNode libraries.</p>
 							<ul>
-								<li>Archive</li>
+								<li><a href="https://groups.google.com/forum/#!forum/geonode-users">Archive</a></li>
 								<li>Subscription -  It’s a google group, so you need a google account to join</li>
 								<li>Old Archive - we moved mailing list providers, so some questions may have been answered on the previous archive.</li>
 							</ul>
@@ -33,7 +33,7 @@
                             <h4>Developer Mailing Lists</h4>
 							<p>This is where all active development of GeoNode takes place. If you’re knee deep in the code it’s the place to email. Traffic can be high, as we try to make most all conversations public so people know what’s going on.</p>
 							<ul>
-								<li>Archive</li>
+								<li><a href="https://groups.google.com/a/opengeo.org/forum/#!forum/geonode-dev">Archive</a></li>
 								<li>Subscription -  It’s a google group, so you need a google account to join</li>
 							</ul>
                         </article>
