add the irc site and fix small things

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="worldwide">
+        <!-- <section class="feature-details" id="worldwide">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -120,14 +120,36 @@
                    	 </div>
                     </div>
                </div>
-        </section>  
-  	<section class="feature-details feature2" id="worldwide">
+        </section>  -->
+        <section class="feature-details feature2" id="worldwide">
+            <div class="container">
+                <div class="row">
+                    <div class="span7">
+                        <div class="highlighted-box">
+                            <h2>JRC Syria Crisis GeoNode</h2>
+                            <h4>Created by the European Commission's Joint Research Centre</h4>
+                            <div>
+                                <p>
+                                The JRC is using GeoNode to share data derived from Post Crisis Need Assessment analysis.
+                                Find it online: <a href= "http://geonode.jrc.ec.europa.eu/">JRC Syria</a>
+                            </p>
+                       </div>                                   
+                 <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
+                        </div>
+                    </div>
+                    <div class="span5">
+                        <a href= "http://geonode.jrc.ec.europa.eu/"><img src="../static/img/jrc.png" width="325" height="189" alt="JRC" class="feature-img thumbnail" /></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details feature2" id="worldwide">
             <div class="container">
                 <div class="row">
                     <div class="span7">
                         <div class="highlighted-box">
                             <h2>MASDAP</h2>
-                            <h4>Created by GFDRR and the World Bank</h4>
+                            <h4>Created by ITHACA on behalf of GFDRR and the World Bank</h4>
                             <div>
                                 <p>
                                 The Government of Malawi, in partnership with the GFDRR labs of the World Bank is using GeoNode 
