fix string length

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -126,7 +126,7 @@
                 <div class="row">
                     <div class="span7">
                         <div class="highlighted-box">
-                            <h2>JRC Syria Crisis GeoNode</h2>
+                            <h2>JRC Syria Crisis</h2>
                             <h4>Created by the European Commission's Joint Research Centre</h4>
                             <div>
                                 <p>
@@ -149,7 +149,7 @@
                     <div class="span7">
                         <div class="highlighted-box">
                             <h2>MASDAP</h2>
-                            <h4>Created by ITHACA on behalf of GFDRR and the World Bank</h4>
+                            <h4>Created by ITHACA, GFDRR and the World Bank</h4>
                             <div>
                                 <p>
                                 The Government of Malawi, in partnership with the GFDRR labs of the World Bank is using GeoNode 
