--- a/gallery/index.html
+++ b/gallery/index.html
@@ -127,7 +127,7 @@
                     <div class="span7">
                         <div class="highlighted-box">
                             <h2>JRC Syria Crisis</h2>
-                            <h4>Created by the European Commission's Joint Research Centre</h4>
+                            <h4>The European Commission's JRC</h4>
                             <div>
                                 <p>
                                 The JRC is using GeoNode to share data derived from Post Crisis Need Assessment analysis.
@@ -149,7 +149,7 @@
                     <div class="span7">
                         <div class="highlighted-box">
                             <h2>MASDAP</h2>
-                            <h4>Created by ITHACA, GFDRR and the World Bank</h4>
+                            <h4>ITHACA, GFDRR and the World Bank</h4>
                             <div>
                                 <p>
                                 The Government of Malawi, in partnership with the GFDRR labs of the World Bank is using GeoNode 
