Added button saying 2.0 is out

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
                         <p>
                             It is designed to be extended and modified, and can be integrated into existing platforms.
                         </p>
-                        <!-- <a href="#" class="btn btn-large btn-success">GeoNode Now</a> -->
+                        <a href="#install" class="btn btn-large btn-success">GeoNode 2.0 is out!</a>
                     </div>
                     <div class="span6">
                         <img src="static/img/hero_img.png" width="560" height="325" alt="" class="hero-img" />
