Added a line informing the user that there are other installation docs available with the link

--- a/pages/index.html
+++ b/pages/index.html
@@ -113,6 +113,7 @@
                                     </span>
                                 </li>
                             </ul>
+                            <p><a href="http://docs.geonode.org/en/master/tutorials/admin/install/quick_install.html#quick-installation"> Read the developer installation docs for Windows, OSX and other platforms</a></p>
                         </div>
 
                 <div class="row">
