it's a code sprint

--- a/pages/code_sprint_2015.html
+++ b/pages/code_sprint_2015.html
@@ -10,8 +10,8 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>GeoNode sprint code 2015</strong><br />
-                            <span>Join the GeoNode sprint code! 2 - 5th February 2015 in Venice.</span>
+                            <strong>GeoNode code sprint 2015</strong><br />
+                            <span>Join the GeoNode code sprint! 2 - 5th February 2015 in Venice.</span>
                     </h1>
                         <div>
                             <a href="http://www.ismar.cnr.it/index_html-1?set_language=en&cl=en" class="btn btn-success" target="_blank">Venue <strong>CNR - ISMAR</strong></a>
