--- a/code_sprint_2015.html
+++ b/code_sprint_2015.html
@@ -70,11 +70,15 @@
                     <div class="span6">
                         <h1>
                             <strong>GeoNode code sprint 2015</strong><br />
-                            <span>Join the GeoNode code sprint! 2 - 5th February 2015 in Venice.</span>
+                            <span>Join the GeoNode code sprint! 2 - 5th February 2015 in Venice and Washington DC.</span>
                     </h1>
                         <div>
-                            <a href="http://www.ismar.cnr.it/index_html-1?set_language=en&cl=en" class="btn btn-success" target="_blank">Venue <strong>CNR - ISMAR</strong></a>
+                            <a href="http://www.ismar.cnr.it/index_html-1?set_language=en&cl=en" class="btn btn-success" target="_blank">@ <strong>CNR - ISMAR</strong></a>
                             <a href="http://www.openstreetmap.org/?mlat=45.4374&mlon=12.3556#map=16/45.4374/12.3556" class="btn btn-success" target="_blank"><strong>Map</strong></a>
+                        </div>
+                        <div style="margin-top:10px;">
+                            <a href="http://energy.gov/" class="btn btn-success" target="_blank">@ <strong>DOE</strong></a>
+                            <a href="https://www.google.it/maps/place/U.S.+Department+of+Energy/@38.887036,-77.025144,16z/data=!4m5!1m2!2m1!1swashington+dc+DOE!3m1!1s0x89b7b79db45f8d13:0x42a3dbb35f0a3eee" class="btn btn-success" target="_blank"><strong>Map</strong></a>
                         </div>
                     </div>
                     <div class="span6">
@@ -112,6 +116,7 @@
                             <div>
                                 <p>From the 2nd to the 4th of February, users and developers will sit together to make the final release of the version 2.4.</p>
                                 <p>Everyone can help by giving suggestions, write documentation or develop.</p>
+                                <p>The venue in DC is @18F's office (<a href="https://18f.gsa.gov/">https://18f.gsa.gov/</a>) within the General Service Administration (GSA)</p>
                             </div>
                         </div>
                     </div>
@@ -127,10 +132,9 @@
                             <h4>What's next?</h4>
                             <div>
                                 <p>
-                                Everyone will sit together to define what feature GeoNode 2.5+ should have.</p>
+                                On the 5th everyone will sit together to define what feature GeoNode 2.5+ should have.</p>
                                 <p>This will be an open discussion with the goal of come out with GNIPs and tickets that has to be addresses before the next release.
-                                </p><p>Features include:
-                                </p>
+                                </p>The Venue @Department of Energy HQ <a href="https://www.google.it/maps/place/U.S.+Department+of+Energy/@38.887036,-77.025144,16z/data=!4m5!1m2!2m1!1swashington+dc+DOE!3m1!1s0x89b7b79db45f8d13:0x42a3dbb35f0a3eee">(1000 Independence Ave SW, DC)</a></p>
                             </div>
                         </div>
                     </div>
@@ -151,7 +155,7 @@
                             <h2>Accomodations</strong></h2>
                             <h4>Some suggestions for hotels</h4>
                                 <div>
-                                    <p>Here some places where you can book for accomodation</p>
+                                    <p>Here some places where you can book for accomodation in Venice</p>
                                 </div>
                             <ul class="unstyled">
                                 <li><a href="http://www.hotelsangeremia.com/">Hotel San Geremia</a></li>
