add jrc to the contributors list

--- a/contributors.html
+++ b/contributors.html
@@ -71,7 +71,7 @@
                         <h1>GeoNode Contributors</h1>
                         <article class="article1">
                             <h5></h5>
-<p>There is a vibrant open source community of users and software developers involved in the advancement of the GeoNode platform.   Many thanks to the support of our contributors and institutions including AIFDR,  ANZSM, GFDRR, Global Earthquake Model, Harvard University, ITHACA, MapStory Foundation, NASA SERVIR, OpenGeo, UN WFP, World Bank, and others.</p>
+<p>There is a vibrant open source community of users and software developers involved in the advancement of the GeoNode platform.   Many thanks to the support of our contributors and institutions including AIFDR,  ANZSM, GFDRR, Global Earthquake Model, Harvard University, ITHACA, MapStory Foundation, NASA SERVIR, OpenGeo, UN WFP, World Bank, EC - Joint Research Centre and others.</p>
 
 <p>We welcome contributions in the form of code contributions, bug fixes, bug reports, contributed documentation, advocacy and supporting other users on our mailing list. If you are interested in actively supporting the project, you can find more information on  GeoNode’s Github profile.</p>
                         </article>
