--- a/code_sprint_2015.html
+++ b/code_sprint_2015.html
@@ -1,10 +1,8 @@
-{% extends "base.html" %}
-
-{% block title %} GeoNode sprint code 2015 {% endblock %}
-
-{% block body_class %}geonode-features user-features{% endblock %}
-
-{% block content %}
+---
+layout: base
+title: GeoNode Code Sprint 2015
+body_class: "geonode-features user-features"
+---
         <section class="banner">
             <div class="container">
                 <div class="row">
@@ -109,17 +107,5 @@
                 </div>
             </div>
         </section>
-
-        {% comment %}
-        <section class="continue">
-            <div class="container">
-                <a href="#">Continue</a>
-            </div>
-        </section>
-        {% endcomment %}
-{% endblock content %}
-
-{% block extra_body %}
-    <script type="text/javascript" src="/static/js/scroll.js"></script>
-{% endblock extra_body %}
-
+        <script type="text/javascript" src="/static/js/scroll.js"></script>
+        {% include footer.html %}
