--- a/gallery/index.html
+++ b/gallery/index.html
@@ -507,4 +507,38 @@ body_class: "geonode-features sites-gallery"
  </div>
 </section>        
 
+<section class="feature-details feature2" id="worldwide">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>Hydrata</strong></h2>
+          <h4>Agile tooling for water management</h4>
+          <div>
+            <p>
+              Hydrata is for water managers, landuse planners and engineering consultants, who are dissatisfied with the complexity and limited accessibility of water planning and flood risk assessments.
+            </p>
+
+            <p>
+              Geonode provides Hydrata with a web-based platform that connects open data, standards, tools and engineers together in one place, to produce interactive management plans that improve with time.
+            </p>
+
+            <p>
+              Find it online at <a href="http://hydrata.com" target="_new">Hydrata.com</a>.
+            </p>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+
+       <a href="http://hydrata.com" target="_new"><img src=../static/img/hydrata.png width="325" height="189" alt="hydrata.com" class="feature-img thumbnail" /></a>
+
+     </div>
+   </div>
+ </div>
+</section>
+
 {% include footer.html %}
