add geoserver in new features

--- a/_drafts/2015-11-19-geonode-2.4-released.html
+++ b/_drafts/2015-11-19-geonode-2.4-released.html
@@ -21,6 +21,7 @@ title: GeoNode 2.4
               <li>Support for remote services</li>
               <li>New responsive templates with brand new look</li>
               <li>New contrib apps</li>
+              <li>Support to Geoserver 2.7.x</li>
               <li>Several performance enhancemens</li>
             </ul>
             </p>
