--- a/_drafts/2015-11-19-geonode-2.4-released.html
+++ b/_drafts/2015-11-19-geonode-2.4-released.html
@@ -33,7 +33,7 @@ title: GeoNode 2.4
               <p>The automatic installer is available for Ubuntu 14.04 Trusty Tahr.</p>
 
               <p>
-                <code>sudo add-apt-repository ppa:geonode/release</code><br>
+                <code>sudo add-apt-repository ppa:geonode/stable</code><br>
                 <code>sudo apt-get update</code><br>
                 <code>sudo apt-get install geonode</code>
               </p>
