fix admin users and dev features

--- a/admin_features.html
+++ b/admin_features.html
@@ -17,7 +17,7 @@ body_class: "geonode-features admin-features"
 
       </div>
       <div class="span6">
-        <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
+        <img src="{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@ body_class: "geonode-features admin-features"
   <div class="container">
     <div class="row">
       <div class="span5">
-        <img src="static/img/noun_project_9760.svg.png" width="320" height="320" alt="Explore Maps" class="feature-img" />
+        <img src="{{site.baseurl}}/static/img/noun_project_9760.svg.png" width="320" height="320" alt="Explore Maps" class="feature-img" />
       </div>
       <div class="span7 number one">
         <div class="highlighted-box">
@@ -73,7 +73,7 @@ body_class: "geonode-features admin-features"
   <div class="container">
     <div class="row">
       <div class="span5">
-        <img src="static/img/noun_project_3182.svg.png" width="340" height="340" alt="Explore Maps" class="feature-img" />
+        <img src="{{site.baseurl}}/static/img/noun_project_3182.svg.png" width="340" height="340" alt="Explore Maps" class="feature-img" />
       </div>
       <div class="span7 number three">
         <div class="highlighted-box">
@@ -116,7 +116,7 @@ body_class: "geonode-features admin-features"
         </div>
       </div>
       <div class="span5">
-        <img src="static/img/noun_project_6853.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+        <img src="{{site.baseurl}}/static/img/noun_project_6853.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
       </div>
     </div>
   </div>
@@ -125,7 +125,7 @@ body_class: "geonode-features admin-features"
   <div class="container">
     <div class="row">
       <div class="span5">
-        <img src="static/img/noun_project_18273.svg.png" width="290" height="290" alt="Explore Maps" class="feature-img" />
+        <img src="{{site.baseurl}}/static/img/noun_project_18273.svg.png" width="290" height="290" alt="Explore Maps" class="feature-img" />
       </div>
       <div class="span7 number five">
         <div class="highlighted-box">
