--- a/dev_features.html
+++ b/dev_features.html
@@ -16,7 +16,7 @@ body_class: "geonode-features dev-features"
         </div>
       </div>
       <div class="span6">
-        <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
+        <img src="{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@ body_class: "geonode-features dev-features"
   <div class="container">
     <div class="row">
       <div class="span5">
-        <img src="static/img/noun_project_8233.svg.png" width="400" height="400" alt="Open Source Geospatial" class="feature-img" />
+        <img src="{{site.baseurl}}/static/img/noun_project_8233.svg.png" width="400" height="400" alt="Open Source Geospatial" class="feature-img" />
       </div>
       <div class="span7 number one">
         <div class="highlighted-box">
@@ -95,7 +95,7 @@ body_class: "geonode-features dev-features"
           </div>
         </div>
         <div class="span5">
-          <img src="static/img/noun_project_2174.svg.png" width="310" height="310" alt="Explore Maps" class="feature-img" />
+          <img src="{{site.baseurl}}/static/img/noun_project_2174.svg.png" width="310" height="310" alt="Explore Maps" class="feature-img" />
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@ body_class: "geonode-features dev-features"
     <div class="container">
       <div class="row">
         <div class="span5">
-          <img src="static/img/noun_project_3064.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
+          <img src="{{site.baseurl}}/static/img/noun_project_3064.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
         </div>
         <div class="span7 number three">
           <div class="highlighted-box">
@@ -145,7 +145,7 @@ body_class: "geonode-features dev-features"
       </div>
     </div>
     <div class="span5">
-      <img src="static/img/noun_project_18273.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
+      <img src="{{site.baseurl}}/static/img/noun_project_18273.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
     </div>
   </div>
 </div>
@@ -154,7 +154,7 @@ body_class: "geonode-features dev-features"
   <div class="container">
     <div class="row">
       <div class="span5">
-        <img src="static/img/noun_project_2549.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+        <img src="{{site.baseurl}}/static/img/noun_project_2549.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
       </div>
       <div class="span7 number five">
         <div class="highlighted-box">
