--- a/user_features.html
+++ b/user_features.html
@@ -17,7 +17,7 @@ body_class: "geonode-features user-features"
         </div>
       </div>
       <div class="span6">
-        <img src="{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
+        <img src="{{site.baseurl}}/{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
       </div>
     </div>
   </div>
@@ -42,7 +42,7 @@ body_class: "geonode-features user-features"
   <div class="container">
     <div class="row">
       <div class="span5">
-        <img src="{{site.baseurl}}/static/img/noun_project_17976.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
+        <img src="{{site.baseurl}}/{{site.baseurl}}/static/img/noun_project_17976.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
       </div>
       <div class="span7 number one">
         <div class="highlighted-box">
@@ -92,7 +92,7 @@ body_class: "geonode-features user-features"
        </div>
      </div>
      <div class="span5">
-      <img src="static/img/noun_project_463.svg.png" width="220" height="220" alt="Explore Maps" class="feature-img" />
+      <img src="{{site.baseurl}}/static/img/noun_project_463.svg.png" width="220" height="220" alt="Explore Maps" class="feature-img" />
     </div>
   </div>
 </div>
@@ -101,7 +101,7 @@ body_class: "geonode-features user-features"
   <div class="container">
     <div class="row">
       <div class="span5">
-        <img src="static/img/noun_project_1670.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
+        <img src="{{site.baseurl}}/static/img/noun_project_1670.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
       </div>
       <div class="span7 number three">
         <div class="highlighted-box">
