update links in index

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: GeoNode
     <div class="row">
       <div class="col-md-4">
         <div class="box box-users">
-          <a href="user_features.html" class="header-link">
+          <a href="{{ site.baseurl }}/user_features" class="header-link">
             <header class="box-header">
               <h2>For Users</h2>
             </header>
@@ -49,12 +49,12 @@ title: GeoNode
             <li>Create and share interactive maps</li>
             <li>Collaborate and interact with other users</li>
           </ul>
-          <a href = "user_features.html" class="btn btn-success">Take the Tour</a>
+          <a href = "{{ site.baseurl }}/user_features" class="btn btn-success">Take the Tour</a>
         </div>
       </div>
       <div class="col-md-4">
         <div class="box box-devs">
-          <a href="dev_features.html" class="header-link">
+          <a href="{{ site.baseurl }}/dev_features" class="header-link">
             <header class="box-header">
               <h2>For Developers</h2>
             </header>
@@ -66,12 +66,12 @@ title: GeoNode
             <li>APIs for customization and connection</li>
             <li>Seamless integration with third-party Django apps</li>
           </ul>
-          <a href = "dev_features.html" class="btn btn-success">Take the Tour</a>
+          <a href = "{{ site.baseurl }}/dev_features" class="btn btn-success">Take the Tour</a>
         </div>
       </div>
       <div class="col-md-4">
         <div class="box box-admins">
-          <a href="admin_features.html" class="header-link">
+          <a href="{{ site.baseurl }}/admin_features" class="header-link">
             <header class="box-header">
               <h2>For Admins</h2>
             </header>
@@ -82,7 +82,7 @@ title: GeoNode
             <li>Metadata management and aggregation platform</li>
             <li>Comprehensive security framework</li>
           </ul>
-          <a href = "admin_features.html" class="btn btn-success">Take the Tour</a>
+          <a href = "{{ site.baseurl }}/admin_features" class="btn btn-success">Take the Tour</a>
         </div>
       </div>
     </div>
