--- a/gallery/index.html
+++ b/gallery/index.html
@@ -541,4 +541,34 @@ body_class: "geonode-features sites-gallery"
  </div>
 </section>
 
+<section class="feature-details feature3" id="worldwide">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+       <a href="http://aware.cirad.fr/" target="_new"><img src=../static/img/aware.png width="325" height="189" alt="AWARE" class="feature-img thumbnail" /></a>
+
+     </div>
+      <div class="span7">
+        <div class="highlighted-box">
+          <h2>AWARE</strong></h2>
+          <h4>Agricultural Web Atlas for REsearch</h4>
+          <div>
+            <p>
+              In Reunion Island the CIRAD (French Agricultural Research Centre for International Development) needed a platform to collect geographic data in order to share spatial data, facilitate access by its teams, and better communicate research results. 
+              Using GeoNode, AWARE (Agricultural Web Atlas for REsearch) meets these needs by providing a catalog of geospatial data available at CIRAD in Reunion Island. The atlas is based on a profile management to respect the rules of confidentiality and broadcasting rights.
+              AWARE targets a wide audience : researchers, agricultural professionals, teachers, funders... Its strength lies in its ability to share spatial information through some said users 'contributors' who can add layers, create maps without using GIS software. It is also possible to link documents to layers and maps. Finally, the atlas uses free technology solutions that implement OGC standards (WMS, WCS, WFS and OWS) ensuring interoperability with GIS software such as ArcGIS or QGIS.
+            </p>
+
+            <p>
+              Find it online at <a href="http://aware.cirad.fr/" target="_new">AWARE</a>.
+            </p>
+
+          </div>
+        </div>
+      </div>
+      
+   </div>
+ </div>
+</section>   
+
 {% include footer.html %}
