--- a/providers/index.html
+++ b/providers/index.html
@@ -13,14 +13,16 @@ body_class: "communication"
           <p>GeoNode is developed and supported by a rich ecosystem of businesses and individuals around the world.  This page provides a list of commercial providers who can assist you in getting the best out of your GeoNode investment.  Their services can range from training and technical support to specialized development and support services to advance the software and support your organization's applications.</p>
         </article>
       </div>
+    </div>
     <div class="row">
-      <div class="span12 align-center">
+      <div class="span12">
         <article class="comm-email">
           <h1>Map</h1>
-          <script src="https://embed.github.com/view/geojson/GeoNode/geonode.github.com/master/providers/providers.geojson"> </script>
+          <p><script src="https://embed.github.com/view/geojson/GeoNode/geonode.github.com/master/providers/providers.geojson"></script></p>
         </article>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   {% include footer.html %}
