Add Saint Lucia's GeoNode
Will also need screencap

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -571,4 +571,30 @@ body_class: "geonode-features sites-gallery"
  </div>
 </section>   
 
+<section class="feature-details feature2" id="americas">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>SLING</strong></h2>
+          <h4>Government of Saint Lucia</h4>
+          <div>
+            <p>
+              SLING (Saint Lucia Integrated GeoNode) is a spatial data sharing portal operated by the Surveys and Mapping Section of the Government of Saint Lucia. 
+            </p>
+
+            <p>
+              Find it online at <a href="http://http://sling.gosl.gov.lc/" target="_new">sling.gosl.gov.lc/</a>.
+            </p>
+
+          </div>
+        </div>
+
+      </div>
+     
+   </div>
+ </div>
+</section>
+
 {% include footer.html %}
