Add Dominica's GeoNode
I have a screenshot but no permissions to upload it. I have asked ortelius to do so.

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -597,4 +597,31 @@ body_class: "geonode-features sites-gallery"
  </div>
 </section>
 
+<section class="feature-details feature3" id="americas">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+
+     </div>
+      <div class="span7">
+        <div class="highlighted-box">
+          <h2>Dominode</strong></h2>
+          <h4>Government of Dominica</h4>
+          <div>
+            <p>
+              Dominode is a geospatial data sharing portal operated by the Government of the Commonwealth of Dominica. 
+            </p>
+
+            <p>
+              Find it online at <a href="http://dominode.dm/" target="_new">Dominode</a>.
+            </p>
+
+          </div>
+        </div>
+      </div>
+      
+   </div>
+ </div>
+</section> 
+
 {% include footer.html %}
