fixed chennai static link

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -534,7 +534,7 @@ body_class: "geonode-features sites-gallery"
       </div>
       <div class="span5">
 
-       <a href="http://chennaifloodmanagement.org" target="_new"><img src=../static/img/chennai.png width="325" height="189" alt="chennaifloodmanagement.org" class="feature-img thumbnail" /></a>
+       <a href="http://chennaifloodmanagement.org" target="_new"><img src=../static/img/cfm.png width="325" height="189" alt="chennaifloodmanagement.org" class="feature-img thumbnail" /></a>
 
      </div>
    </div>
