Added ChennaiFloodManagement.org, removed Hydrata.com (#51)
* Swapped out Hydrata.com for ChennaiFloodManagement.org

* Delete hydrata.png

* Chennai pic

* fixed chennai static link

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -513,19 +513,19 @@ body_class: "geonode-features sites-gallery"
       <div class="span7">
 
         <div class="highlighted-box">
-          <h2>Hydrata</strong></h2>
-          <h4>Agile tooling for water management</h4>
+          <h2>Chennai Flood Management</strong></h2>
+          <h4>Open source collaborative solutions for flooding</h4>
           <div>
             <p>
-              Hydrata is for water managers, landuse planners and engineering consultants, who are dissatisfied with the complexity and limited accessibility of water planning and flood risk assessments.
+              ChennaiFloodManagement.org provides a platform for collaborative solutions to the complex social and environmental challenges of life on Chennai's urban floodplains.
             </p>
 
             <p>
-              Geonode provides Hydrata with a web-based platform that connects open data, standards, tools and engineers together in one place, to produce interactive management plans that improve with time.
+              Geonode provides Chennai with a web-based platform that connects open data, standards, tools and engineers together in one place, to produce interactive management plans that improve with time.
             </p>
 
             <p>
-              Find it online at <a href="http://hydrata.com" target="_new">Hydrata.com</a>.
+              Find it online at <a href="http://chennaifloodmanagement.org" target="_new">ChennaiFloodManagement.org</a>.
             </p>
 
           </div>
@@ -534,7 +534,7 @@ body_class: "geonode-features sites-gallery"
       </div>
       <div class="span5">
 
-       <a href="http://hydrata.com" target="_new"><img src=../static/img/hydrata.png width="325" height="189" alt="hydrata.com" class="feature-img thumbnail" /></a>
+       <a href="http://chennaifloodmanagement.org" target="_new"><img src=../static/img/cfm.png width="325" height="189" alt="chennaifloodmanagement.org" class="feature-img thumbnail" /></a>
 
      </div>
    </div>
