Change logo "OSGeo Incubation Project" to "OSGeo Project"
GeoNode has graduated from incubation at 2016-11-09
http://www.osgeo.org/node/1740

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: GeoNode
             <a href="http://build.geonode.org/windows/GeoNode-2.4.x.exe" class="btn btn-md btn-success">GeoNode 2.4 Windows Installer</a>
           </p>
           <div class="promo-links">
-            <a title="OSGeo Project in Incubation" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project in Incubation" src="https://svn.osgeo.org/osgeo/marketing/logo/png8/150/OSGeo_incubation.png"/></a>
+            <a title="OSGeo Project" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project" src="https://svn.osgeo.org/osgeo/marketing/logo/png8/150/OSGeo_project.png"/></a>
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
