Disabling summit banner, adding Gitter info

--- a/communication/index.html
+++ b/communication/index.html
@@ -37,22 +37,16 @@ body_class: "communication"
         </article>
       </div>
       <div class="span4">
-        <article id="irc" class="article1">
+        <article id="gitter" class="article1">
           <img src="{{site.baseurl}}/static/img/icons/irc_black.png" width="81" height="80" alt="" class="icon" />
-          <h4>IRC</h4>
-          <p>The GeoNode community is available on IRC for interactive question and answer.  You can often find active developers, helpful users, and all manner of activity. It can be a useful way to find a quick answer or interact on a problem.</p>
-
-          <p>If you are new to IRC, you will need to find an IRC client (Pidgin, mIRC, or even Colloquy on mac).</p>
+          <h4>Gitter</h4>
+          <p>The GeoNode community is available on Gitter for interactive question and answer.  You can often find active developers, helpful users, and all manner of activity. It can be a useful way to find a quick answer or interact on a problem.</p>
+          <p>If you are new to Gitter, you you can quickly join the conversation with a Github or Twitter account</p>
           <ul>
-            <li>irc://irc.freenode.net/geonode</li>
-            <li><a href="http://webchat.freenode.net/?channels=#geonode">Web Chat</a></li>
+          <li>GeoNode <a href="https://gitter.im/GeoNode/general">general chat room</a></li>
+          <li>A list of all GeoNode <a href="https://gitter.im/GeoNode/home">Gitter rooms</a></li>
+		  <li>Get Gitter <a href="https://gitter.im/apps">apps</a> for desktop and mobile devices</li>
           </ul>
-          <p>The information you need to configure your IRC client are:<p>
-            <ul>
-              <li>Server – Pick one from Freenode Servers</li>
-              <li>Channel – #geonode</li>
-              <li>Port – 6667</li>
-            </ul>
           </article>
         </div>
       </div>
