--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 layout: base
 title: GeoNode
 ---
+<!-- This banner can be reused when needed for special events or announcements
 <div class="row">
   <div class="col-xs-12 alert-warning" style="text-align:center;"><a href="http://summit.geonode.org"><h3>GeoNode Summit 2016 in Rome, Italy - Nov. 28 to Dec. 2</h3></a></div>
 </div>
+-->
 <section class="banner">
   <div class="container">
     <div class="row">
