Update URL for PCRAFI

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -418,7 +418,7 @@ body_class: "geonode-features sites-gallery"
     <div class="row">
       <div class="span5">
 
-        <a href="http://paris.sopac.org" target="_new"><img src=../static/img/paris.png width="325" height="262" alt="PaRIS" class="feature-img thumbnail" /></a>
+        <a href="http://pcrafi.spc.int/" target="_new"><img src=../static/img/paris.png width="325" height="262" alt="PaRIS" class="feature-img thumbnail" /></a>
 
       </div>
       <div class="span7">
@@ -432,7 +432,7 @@ body_class: "geonode-features sites-gallery"
           </p>
 
           <p>
-            Find it online at <a href="http://paris.sopac.org" target="_new">PaRIS</a>.
+            Find it online at <a href="http://pcrafi.spc.int/" target="_new">PaRIS</a>.
           </p>
 
         </div>
