--- a/gallery/index.html
+++ b/gallery/index.html
@@ -648,4 +648,41 @@ body_class: "geonode-features sites-gallery"
  </div>
 </section>
 
+<section class="feature-details feature2" id="africa">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>RCMRD Geoportal</strong></h2>
+          <h4>Developed by RCMRD-SERVIR Eastern &amp; Southern Africa </h4>
+          <div>
+            <p>
+              RCMRD GeoPortal is a platform for disseminating 
+              open geospatial datasets and products for the Eastern and Southern Africa region.
+              The Regional Centre for Mapping of Resources for development (RCMRD) has partnered
+              with  <a href="https://www.usaid.gov/" target="_new"> USAID</a> and 
+              <a href="https://www.nasa.gov/" target="_new">NASA</a> through the SERVIR-Eastern
+              &amp; Southern Africa (SERVIRESA) with the objectives of improving the environmental
+              management and resilience to climate change by strengthening the capacity of governments
+              and other key stakeholders to integrate Earth observation information and 
+              geospatial technologies into development decision making.
+              SERVIRESA aims at archiving more resilience outcomes in the following areas:
+              Agriculture &amp; Food Security, Land use &amp; Ecosystems, Water &amp; related Disasters,
+              and Weather &amp Climate.
+			    </p>
+			    <p>
+              Find it online at <a href="http://geoportal.rcmrd.org" target="_new">RCMRD Geoportal</a>.
+          </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+       <a href="http://geoportal.rcmrd.org" target="_new"><img src=../static/img/rcmrd.png width="325" height="189" alt="rcmrd.org" class="feature-img thumbnail" /></a>
+     </div>
+   </div>
+ </div>
+</section>
+
 {% include footer.html %}
